# Nozzle

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  add_slack_setting.py  alembic.ini  apply_fixes.py  final_fixes.py  fixes_day2.py  pyproject.toml  reg_hybrid.py  register_ml.py  register_strategies.py  reset_alerts.py  seed_user.py  еееееентпгн.html
nozzle/: main.py  settings.py
nozzle/api/: deps.py  router.py
nozzle/api/v1/: alerts.py  clusters.py  health.py  rules.py  sources.py  stats.py  users.py
nozzle/api/v2/: __init__.py
nozzle/clustering/: __init__.py  base.py  manager.py  registry.py
nozzle/clustering/strategies/: __init__.py  hybrid.py  ml_based.py  rule_based.py  semantic.py  temporal_burst.py
nozzle/core/: __init__.py  exceptions.py  logging_config.py
nozzle/db/: session.py
nozzle/db/migrations/: env.py  script.py.mako
nozzle/db/migrations/versions/: 33b1aa61e0bf_initial_create_all_tables.py  7f0cffb73e82_initial_universal_types.py
nozzle/db/queries/: stats.py
nozzle/domain/: __init__.py  enums.py  models.py  schemas.py
nozzle/ingestion/: __init__.py  base.py  normalizer.py  registry.py  wazuh.py
nozzle/ml/: feature_engineering.py  training.py
nozzle/notifications/: slack.py
nozzle/scheduler/: worker.py
nozzle/scheduler/tasks/: reports.py  training.py
nozzle/services/: __init__.py  ingestion_service.py
nozzle/web/: app.py
nozzle/web/templates/: dashboard.html
nozzle/web/utils/: auth.py
tests/: conftest.py
tests/unit/: test_normalizer.py  test_rule_based_strategy.py
