[project]
name = "nozzle"
version = "0.1.0"
description = "ML-powered alert deduplication for SIEM systems"
readme = "README.md"
requires-python = ">=3.11"
license = "AGPL-3.0"
authors = [
    {name = "misha622"}
]
keywords = ["siem", "wazuh", "alert-fatigue", "ml", "soc"]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.28.0",
    "redis>=5.2.0",
    "arq>=0.26.0",
    "scikit-learn>=1.5.0",
    "lightgbm>=4.5.0",
    "sentence-transformers>=3.3.0",
    "scipy>=1.14.0",
    "numpy>=2.1.0",
    "pandas>=2.2.0",
    "streamlit>=1.40.0",
    "plotly>=5.24.0",
    "jinja2>=3.1.0",
    "python-dotenv>=1.0.0",
    "tenacity>=9.0.0",
    "structlog>=24.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    "factory-boy>=3.3.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "C4"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["nozzle*"]

[tool.setuptools.package-dir]
"" = "."
